--- a/challenge/exploration.ipynb
+++ b/challenge/exploration.ipynb
@@ -1800,7 +1800,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mle-challenge",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1814,7 +1814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
